--- a/front/package.json
+++ b/front/package.json
@@ -8,21 +8,25 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "rnpm": {
+    "assets": ["assets/fonts/"]
+  },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0",
-    "@expo/webpack-config": "^0.17.0",
-    "expo-font": "~10.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
