--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "rnpm": {
-    "assets": ["assets/fonts/"]
+    "assets": [
+      "assets/fonts/"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -17,6 +19,7 @@
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "dateformat": "^5.0.3",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
