fit: scrol, event

--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "rnpm": {
-    "assets": ["assets/fonts/"]
+    "assets": [
+      "assets/fonts/"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -19,6 +21,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
