--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,8 @@
     "react-native-web": "~0.18.7",
     "react-dom": "18.0.0",
     "@expo/webpack-config": "^0.17.0",
-    "expo-font": "~10.2.0"
+    "expo-font": "~10.2.0",
+    "expo-secure-store": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
