--- a/front/package.json
+++ b/front/package.json
@@ -28,12 +28,14 @@
     "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.2.9",
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
